[package]
name = "alloy-rs"
version = "0.2.1"
edition = "2021"
description = "Static Rust library for working with the Apache Arrow ffi using any C supported language."
authors = [
    "Wilhelm Ågren <wilhelmagren98@gmail.com>",
]
license = "MIT"
homepage = "https://github.com/firelink-data/alloy/tree/main"
repository = "https://github.com/firelink-data/alloy/tree/main/alloy-rs"

[lib]
crate-type = [ "staticlib" ]

[dependencies]
arrow2 = "0.18.0"
chrono = "0.4.31"
env_logger = "0.10.1"
libc = "0.2.150"
log = "0.4.20"
